apps/seedbox/jellyfin/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jellyfin
  namespace: seedbox
subsets:
- addresses:
  - ip: 192.168.10.100
  ports:
  - name: http
    port: 8096
    protocol: TCP
