apps/seedbox/jellyfin/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: seedbox
spec:
  parentRefs:
  - name: vlan200-gateway
    namespace: networking
  hostnames:
  - jellyfin.logikdev.fr
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyfin
      port: 80
